<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_r_uname"
            android:textSize="14sp"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/username" />

        <EditText
            android:id="@+id/et_r_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/masukan_username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="14sp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_r_password"
            android:textSize="14sp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_r_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/masukan_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="14sp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_email"
            android:textSize="14sp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="14sp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_namaLengkap"
            android:textSize="14sp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namalengkap" />

        <EditText
            android:id="@+id/et_namaLengkap"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/namalengkap"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="14sp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_asalSekolah"
            android:textSize="14sp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asal_sekolah" />

        <EditText
            android:id="@+id/et_asalSeklolah"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/asal_sekolah"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="14sp"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_alamat"
            android:textSize="14sp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat" />

        <EditText
            android:id="@+id/et_alamat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/masukan_alamat_tinggal"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="14sp"
            android:autofillHints="" />

        <Button
            android:layout_marginTop="40dp"
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:cornerRadius="15dp"
            android:text="@string/simpan" />
    </LinearLayout>
</ScrollView>